--- a/com.mlink.core/.project
+++ b/com.mlink.core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.mlink.core</name>
+	<name>com.mlink.common</name>
 	<comment></comment>
 	<projects>
 	</projects>
